# triangle_partitioned_genetic_algorithm

./: Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: benchmark.rs  image_member.rs  main.rs
genetic_algorithm_lib/: Cargo.toml
genetic_algorithm_lib/src/: lib.rs  member.rs  population.rs
image_lib/: Cargo.toml
image_lib/src/: colour.rs  lib.rs  point.rs
image_lib/src/images/grid/: mod.rs  polygon.rs  tri.rs
image_lib/src/images/grid/image/: member.rs  mod.rs  mutation.rs  rasters.rs
nannou/: Cargo.toml
nannou/src/: main.rs
