[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image-lib = { path= "../image_lib" }
genetic_algorithm-lib = { path= "../genetic_algorithm_lib" }
rand = "0.8.4"
image = "0.23.14"
imageproc = "0.22.0"
structopt = "0.3.25"
chrono = "0.4"
svg = "0.10.0"
cairo-rs = { version ="0.15.1", features = ["svg", "png"] }